--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 authors = ["Alexander Silvennoinen <alex@silvennoinen.de>"]
 
 [dependencies]
-tungstenite = { version = "0.27", features = ["__rustls-tls"] }
+tungstenite = { version = "0.27", features = ["rustls"] }
+rustls = "0.23"
 tracing = "0.1"
 
 [lib]
