use rustls-tls-native-roots

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 authors = ["Alexander Silvennoinen <alex@silvennoinen.de>"]
 
 [dependencies]
-tungstenite = { version = "0.27", features = ["rustls"] }
-rustls = "0.23"
+tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
 tracing = "0.1"
 
 [lib]
