switch crypto provider

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 authors = ["Alexander Silvennoinen <alex@silvennoinen.de>"]
 
 [dependencies]
-tungstenite = { version = "0.27", default-features = false, features = ["rustls"] }
+tungstenite = { version = "0.27", default-features = false, features = [
+    "handshake", "rustls"] }
 tracing = "0.1"
 
 [lib]
