--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 authors = ["Alexander Silvennoinen <alex@silvennoinen.de>"]
 
 [dependencies]
-tungstenite = { version = "0.27", default-features = false, features = [
-    "handshake", "rustls"] }
+tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
 tracing = "0.1"
 
 [lib]
