--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,19 @@
 [package]
 name = "s9_websocket"
+description = "A simple client library for blocking and non-blocking WebSockets."
+categories = ["web-programming::websocket", "network-programming"]
+keywords = ["websocket", "io", "web", "non-blocking"]
 version = "0.0.1"
-edition = "2021"
 authors = ["Alexander Silvennoinen <alex@silvennoinen.de>"]
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+documentation = "https://docs.rs/s9_websocket/0.0.1"
+homepage = "https://github.com/AlexanderSilvennoinen/s9_websocket"
+repository = "https://github.com/AlexanderSilvennoinen/s9_websocket"
+edition = "2021"
+include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
 
 [dependencies]
-#tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
 tungstenite = { version = "0.27", features = ["native-tls"] }
 crossbeam-channel = "0.5"
 tracing = "0.1"
