--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ tungstenite = { version = "0.27", features = ["native-tls"] }
 crossbeam-channel = "0.5"
 tracing = "0.1"
 
+[dev-dependencies]
+tracing-subscriber = "0.3"
+
 [lib]
 name = "s9_websocket"
 path = "src/lib.rs"
