--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.0.0"
 authors = ["Alexander Silvennoinen <alex@silvennoinen.de>"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
-documentation = "https://github.com/AlexSilver9/s9_websocket"
+documentation = "https://docs.rs/s9_websocket/latest/s9_websocket"
 homepage = "https://github.com/AlexSilver9/s9_websocket"
 repository = "https://github.com/AlexSilver9/s9_websocket"
 edition = "2021"
